Added Mayavi container and fixed torch Dockerfile

--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,29 @@ services:
     image: nvidia_torch_1_13
     ipc: host
     volumes:
-      - ./../3d-detection-pipeline:/home/user/workspace
+      - ./../3d-detection-pipeline:/home/robesafe/3d-detection-pipeline
+      - ./../Datasets:/home/robesafe/Datasets
+      - /media/robesafe/SSD_SATA/KITTI_DATASET:/media/robesafe/SSD_SATA/KITTI_DATASET
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility,graphics,display
+    entrypoint: /bin/bash
+
+  mayavi:
+    runtime: nvidia
+    build: ./mayavi_vis
+    image: mayavi_vis
+    ipc: host
+    volumes:
+      - ./../3d-detection-pipeline:/home/robesafe/3d-detection-pipeline
+      - ./../Datasets:/home/robesafe/Datasets
+      - /media/robesafe/SSD_SATA/KITTI_DATASET:/media/robesafe/SSD_SATA/KITTI_DATASET
+      - /tmp/.X11-unix:/tmp/.X11-unix
+      - ~/.Xauthority:/root/.Xauthority
+    network_mode: "host"
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility,graphics,display
+      - DISPLAY=unix$DISPLAY
+      - XAUTHORITY=/home/robesafe/.Xauthority
     entrypoint: /bin/bash
